auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8287e8c5",
+   "id": "76c24c9f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d08c2ddb",
+   "id": "049c1292",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e13070",
+   "id": "47f863c2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7972e1bc",
+   "id": "134d8d21",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270dfecb",
+   "id": "166b6eea",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5ae945",
+   "id": "e80a5c29",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "482ac507",
+   "id": "08c28fda",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb04f8a",
+   "id": "afef05e5",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49395d30",
+   "id": "7e9508b8",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37d538e2",
+   "id": "b0dd7a71",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3119cf2c",
+   "id": "41d00c04",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cf0de7",
+   "id": "d1f0ab7c",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4046fc16",
+   "id": "ae0240b3",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476b0205",
+   "id": "6247a3d6",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b9ff157",
+   "id": "15b97920",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27838ddd",
+   "id": "6f8ccdaa",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf81719",
+   "id": "b7722a23",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4b72181",
+   "id": "8dcefe17",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c1db72",
+   "id": "f593c439",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d58a73",
+   "id": "b913f64a",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a393d18f",
+   "id": "ed3da677",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58ae4130",
+   "id": "b2604271",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94964cff",
+   "id": "9d8a8e4e",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d88144",
+   "id": "29c92ca3",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc442cf",
+   "id": "21161724",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6305803c",
+   "id": "d65cf93e",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93cadb7",
+   "id": "3f3446e3",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f79fa5",
+   "id": "a1d89f4c",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ada359e3",
+   "id": "de3d2482",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f447f6a",
+   "id": "83448ab2",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b7a139",
+   "id": "c5baf2cb",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a63747b1",
+   "id": "84c9bfc5",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddcad96d",
+   "id": "bb000468",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c2938e2",
+   "id": "40cf3f3d",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0b7e8fb",
+   "id": "0b4c3d14",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf25fec3",
+   "id": "1346d19e",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a0742c4",
+   "id": "bf992302",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf0c2ace",
+   "id": "ea6eabbc",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9738bc98",
+   "id": "600e2e79",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c272d5",
+   "id": "71dff49a",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aadd192",
+   "id": "534a8ab6",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca416ed",
+   "id": "450345ad",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be2b041",
+   "id": "9452fdf7",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "673ac84c",
+   "id": "ca4ef591",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f11a382f",
+   "id": "3c08eb28",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95a05631",
+   "id": "49b8eca1",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae34ca0",
+   "id": "7206dd9d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af0c9540",
+   "id": "9a473529",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a13e51",
+   "id": "d17edfbf",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f89938",
+   "id": "a5bbbf11",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52323c3b",
+   "id": "4da6e8db",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd2c2087",
+   "id": "cf9ff70f",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e56df20",
+   "id": "afadbf93",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6bf8f2",
+   "id": "5a5c182e",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c52424",
+   "id": "d08e7d04",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "283aa500",
+   "id": "90008cf0",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b22e2ac",
+   "id": "9882ab70",
    "metadata": {
     "hide-output": false
    },
@@ -1278,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836277.769477,
+  "date": 1764839050.2870061,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
