--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79d6fa45",
+   "id": "52fc4ae0",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc2e758",
+   "id": "80b9b430",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38f9e035",
+   "id": "79412bcc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bcb8c74",
+   "id": "6230db3c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82fa494f",
+   "id": "a169d3f6",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a211038",
+   "id": "cce5b159",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee7f620",
+   "id": "294b8ad0",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "592a2ce0",
+   "id": "219a88d6",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8026d2df",
+   "id": "f7a6501c",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "700a3784",
+   "id": "ba13cffa",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21556065",
+   "id": "c5e22760",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf81be5",
+   "id": "0abe44bf",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5076379",
+   "id": "48da183b",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b22cf42",
+   "id": "8b570766",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678baa82",
+   "id": "8cd21b86",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "838079f3",
+   "id": "a633a120",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcffd60b",
+   "id": "e8fbadbb",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30223b5b",
+   "id": "9a9bbdf5",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4513ca6",
+   "id": "0ce38ce3",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5665f2a7",
+   "id": "011e8a75",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5db81a6",
+   "id": "6c89fc7b",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a1a3436",
+   "id": "e7934607",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cbd9afe",
+   "id": "678b73b6",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abd1fa57",
+   "id": "1bf56fe8",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3044ab7b",
+   "id": "8de41f03",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96433a2",
+   "id": "7df0a221",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b7f6ca8",
+   "id": "0a73b1c7",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca101b3",
+   "id": "752d057c",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ad4ca2",
+   "id": "d8123b83",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f306c4e",
+   "id": "294b31bd",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c83bf97e",
+   "id": "a3b8ff51",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c8d028d",
+   "id": "4ea74dbc",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddf1ba04",
+   "id": "9e5e84ef",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9cc21e3",
+   "id": "9c053d74",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ae64b08",
+   "id": "49cc0262",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "855d69a4",
+   "id": "7115f8a0",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7b5e5ea",
+   "id": "1fde142c",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d324537e",
+   "id": "0fa9ab23",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa7fe9d",
+   "id": "65c4eb34",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ef85f29",
+   "id": "3a4285e1",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35902e33",
+   "id": "c9036aaa",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a3abd2f",
+   "id": "69a8a0f9",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95c7198d",
+   "id": "cb15c57c",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81689795",
+   "id": "b112c00d",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a6dd1b6",
+   "id": "90ebb5f3",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c06e9a4d",
+   "id": "d92b2d22",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28674470",
+   "id": "381b9664",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c82fe68",
+   "id": "d1263803",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35abbf8",
+   "id": "1eb3684e",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6dc924",
+   "id": "c3b07d8b",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff918441",
+   "id": "e5619779",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2065d1d",
+   "id": "f955d2bf",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8a6147",
+   "id": "71a3db56",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b97ea6",
+   "id": "c886f1e7",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa7ff73",
+   "id": "b62c090c",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f2f383",
+   "id": "61acf985",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a6bf850",
+   "id": "1a2c3b66",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215a1b99",
+   "id": "573cbaee",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc60944",
+   "id": "f983042c",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7068d223",
+   "id": "5e4f2023",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec58e87",
+   "id": "1f9c9dc3",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe89054",
+   "id": "5abecec6",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bf83b30",
+   "id": "18c83242",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46433cf2",
+   "id": "1180f7a3",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d11bb0",
+   "id": "b1cc6609",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836277.7972329,
+  "date": 1764839050.31633,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
