--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4696dfdd",
+   "id": "dd525f88",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032a151c",
+   "id": "5eba7193",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29d6a814",
+   "id": "c3cbb908",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed9140f",
+   "id": "b1f11440",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1f70b8",
+   "id": "9efc33ff",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e1e10cb",
+   "id": "156e224a",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9efb5ec2",
+   "id": "6386f681",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a5349f",
+   "id": "b48ecc08",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2baead3",
+   "id": "f9bd4c4f",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -114,7 +114,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836277.913526,
+  "date": 1764839050.4405453,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
