--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "43d164b1",
+   "id": "10b2c456",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1f8485",
+   "id": "213c9fe6",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f890999c",
+   "id": "6d57ea29",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "949f1afb",
+   "id": "c45dafbd",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe24b548",
+   "id": "3e83c69b",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e04081",
+   "id": "b97058be",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911c59ee",
+   "id": "702da550",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5b5d84c",
+   "id": "9bb6e1bc",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e40fdd",
+   "id": "2aced4fa",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9c847a",
+   "id": "9e1bfc5e",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95f16445",
+   "id": "5b5c0304",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31effb7a",
+   "id": "d9871145",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97be96dc",
+   "id": "df9d194a",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d20520",
+   "id": "0b4191c8",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87601b05",
+   "id": "a0f9429c",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f4e5bf7",
+   "id": "34d4480d",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76823896",
+   "id": "6694916f",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c022caaa",
+   "id": "f0bb21a7",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25aa176",
+   "id": "b35d4797",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ecea207",
+   "id": "0838a3c2",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71b61f5b",
+   "id": "b1eac1ce",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0006e8c",
+   "id": "deb92d84",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e35b9f",
+   "id": "4f0f4ab6",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "004544f5",
+   "id": "8ad67784",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f95dcd0d",
+   "id": "3aacee3d",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8662dcec",
+   "id": "f216a8f4",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939ee007",
+   "id": "fb29a6e4",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a876ed2",
+   "id": "00240f65",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a50d9ac",
+   "id": "59ccccb5",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44a7ae12",
+   "id": "483aa7ed",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f962f1",
+   "id": "a38cfa9f",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e76a3df",
+   "id": "32e2dac6",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbde46ac",
+   "id": "4732621d",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ddbf71d",
+   "id": "1f2005d6",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f53d9f",
+   "id": "c070f731",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf2a015",
+   "id": "a2658f94",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c1098e5",
+   "id": "97f9b58d",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a357e13b",
+   "id": "451a70a4",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dedd31c",
+   "id": "98b91d57",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70fb9854",
+   "id": "9472fe98",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9893cfe",
+   "id": "9f241c5e",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607aa638",
+   "id": "bbc959f4",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb711ca",
+   "id": "65a8625b",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5efc7abd",
+   "id": "1f0cef0b",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bbb6107",
+   "id": "2756a11c",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7209dae",
+   "id": "c46e89bc",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "198fb2be",
+   "id": "418d1f40",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b043a596",
+   "id": "63c5911e",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab83ba1",
+   "id": "9e403b01",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f5a10f5",
+   "id": "6d7b2b30",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91b4e648",
+   "id": "a966a683",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895954fc",
+   "id": "e3ae9dcd",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836278.096949,
+  "date": 1764839050.6364458,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
