--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87369426",
+   "id": "5322b1e2",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9bad287",
+   "id": "6de651fe",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aaac560",
+   "id": "9c29b466",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcc82b6",
+   "id": "73bfe2ec",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea51bf9",
+   "id": "48239f04",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d89894",
+   "id": "fb8bd7b7",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d3d566",
+   "id": "dedbf4c2",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b18033",
+   "id": "0cb50745",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f625336b",
+   "id": "1cd70b33",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe9d1e0",
+   "id": "f938e9c9",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fef4934",
+   "id": "041a631c",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b91a98d2",
+   "id": "b898df34",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "994b9241",
+   "id": "712678f3",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e3f8fe",
+   "id": "31ec8044",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b2f03f8",
+   "id": "36226dd1",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bde0bae",
+   "id": "66caca4f",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85519246",
+   "id": "73bb9416",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b23d7b3",
+   "id": "0caf2f2c",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abdae917",
+   "id": "94f9ab45",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fc8e324",
+   "id": "2dcccef6",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7177abf",
+   "id": "cba34a21",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf19e77d",
+   "id": "a6a452da",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f10539b6",
+   "id": "1a228b89",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ccc6517",
+   "id": "140c8633",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7508ed0",
+   "id": "78f4ab27",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c232675a",
+   "id": "c45c32fc",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bb4cbac",
+   "id": "99789b71",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a0b095",
+   "id": "213629e3",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d84c7b",
+   "id": "554f0daa",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3bbdfff",
+   "id": "7ca5db88",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b0aa423",
+   "id": "ca2d1767",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c36634",
+   "id": "16465ee8",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed05687",
+   "id": "162d2a13",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d07ea88",
+   "id": "57720203",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20686c49",
+   "id": "79471dc4",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27de2e24",
+   "id": "1ff9b018",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72852d34",
+   "id": "ecc15447",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47941c0b",
+   "id": "6ce30dc5",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a59a1b",
+   "id": "22e47e6b",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d70842",
+   "id": "0af2b320",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e39b42",
+   "id": "49be71bf",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3767b0c3",
+   "id": "cd9b6179",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc02725d",
+   "id": "d293a4d9",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd146ac",
+   "id": "0908f6f7",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1593ed5",
+   "id": "a62ad380",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0398794c",
+   "id": "23c025e5",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6182c083",
+   "id": "724540cd",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a57fb9",
+   "id": "41eb4b98",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60a55963",
+   "id": "37b9c9ae",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836278.1658812,
+  "date": 1764839050.709561,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
