--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2b1802d",
+   "id": "75b05496",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d63c2d34",
+   "id": "50a694f8",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f907f30b",
+   "id": "72131f53",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77c9bd96",
+   "id": "8d8bf5d3",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55f625fa",
+   "id": "5d5251d6",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cefcf55",
+   "id": "80b98b41",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52687e12",
+   "id": "75aa510e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b402b449",
+   "id": "03e442b9",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb926cb",
+   "id": "58f8b4e8",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfbbb7d5",
+   "id": "cc27773e",
    "metadata": {
     "hide-output": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156c157e",
+   "id": "9ebf0c62",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "084e24e5",
+   "id": "8d0ed372",
    "metadata": {
     "hide-output": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a08b959",
+   "id": "95ea4186",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9489b916",
+   "id": "395ad458",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342de812",
+   "id": "d6345686",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a71a85",
+   "id": "b59b6585",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "829c184e",
+   "id": "9b393d6d",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863e7cdf",
+   "id": "9d1f99b6",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "230208c6",
+   "id": "226bf8df",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "559b0f86",
+   "id": "0a73b25c",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23883c3a",
+   "id": "2800d956",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f391f447",
+   "id": "271f9b1f",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc8070e",
+   "id": "957d38af",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5add2069",
+   "id": "6aafd44a",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f3b2ec",
+   "id": "1f98e889",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbf088bc",
+   "id": "d1197318",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e908a8",
+   "id": "1da845d9",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b934ac",
+   "id": "05b5913f",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f034927",
+   "id": "d8c8fc6f",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7275c6",
+   "id": "f6cdf987",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaf2378",
+   "id": "9872d5e1",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c779b79",
+   "id": "8bd27b8a",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afab6647",
+   "id": "07e7b39b",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "727f762d",
+   "id": "aa7882b4",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d14da32e",
+   "id": "3e1ea139",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e3ffcb",
+   "id": "b5411d22",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0608c4be",
+   "id": "5f050709",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "783c9dd2",
+   "id": "e15bfe4e",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ba8127",
+   "id": "7602d660",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a328dd",
+   "id": "d0f8e0a1",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a1dc813",
+   "id": "fc65b8bc",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb4119c",
+   "id": "21e5d035",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef781bd1",
+   "id": "507d632e",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134de5e1",
+   "id": "2d3a64e0",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65ce834",
+   "id": "90c4ea79",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eda4c87",
+   "id": "36c8820f",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ed56c3",
+   "id": "7599da9c",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204eef86",
+   "id": "ef7a9778",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97887edd",
+   "id": "e6b8ad03",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2649ba",
+   "id": "f6114a9f",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b287f722",
+   "id": "45c3a067",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3878488d",
+   "id": "fbb1eb33",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4a80754",
+   "id": "359a54b0",
    "metadata": {
     "hide-output": false
    },
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaf6bc57",
+   "id": "e58b8c02",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edb0a420",
+   "id": "e93b9b2d",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cacbd9",
+   "id": "18b414a4",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d1d1b9",
+   "id": "c8ed42c7",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d3d4a1b",
+   "id": "11802e35",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41970ac3",
+   "id": "8823327d",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836278.295937,
+  "date": 1764839050.8477223,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
