--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "386e2a84",
+   "id": "c5a0d4ff",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7028e121",
+   "id": "18d3c47d",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda6e560",
+   "id": "4a44e8e2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dccc35b6",
+   "id": "39f8632f",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c02234f",
+   "id": "16390cd3",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc20b48",
+   "id": "38f8e5cf",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff412961",
+   "id": "28f801b7",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04f6632",
+   "id": "5d3f2b61",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53d4b072",
+   "id": "76f84933",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6710e21",
+   "id": "afc126f9",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c507316",
+   "id": "208b3219",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d2caf2",
+   "id": "32324564",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e853a95",
+   "id": "f3e82471",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b52416f",
+   "id": "8500babd",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df985b28",
+   "id": "42211172",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "163421dc",
+   "id": "fa23338a",
    "metadata": {
     "hide-output": false
    },
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56589dc9",
+   "id": "7c405eb1",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3266ca67",
+   "id": "99d63782",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03fe8a08",
+   "id": "0c184976",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df14d6f",
+   "id": "b9427b48",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0296592",
+   "id": "bfbce34e",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaba1cc5",
+   "id": "234a437f",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16b40fd3",
+   "id": "d4b61345",
    "metadata": {
     "hide-output": false
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b38dc0",
+   "id": "c504d537",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9abc197",
+   "id": "76d9770e",
    "metadata": {
     "hide-output": false
    },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c94a594",
+   "id": "bb95a5d4",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23cf04fd",
+   "id": "6c1d3163",
    "metadata": {
     "hide-output": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c26f91",
+   "id": "f407a63a",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8813d36c",
+   "id": "281da9c7",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5f9b528",
+   "id": "c9a4ca02",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33b2f73a",
+   "id": "d655ffbf",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "329fcb53",
+   "id": "2d71d676",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21eaa194",
+   "id": "27fd7fdc",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e77879",
+   "id": "3d469d05",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f30f88b8",
+   "id": "38cd0bcd",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e74e898",
+   "id": "eb070744",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d5c353c",
+   "id": "54aecfc0",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6cd502a",
+   "id": "10d16858",
    "metadata": {
     "hide-output": false
    },
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "762e0591",
+   "id": "f6b93b60",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d6eb3a",
+   "id": "8723a840",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57170527",
+   "id": "0de0eab9",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -667,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcdd4e7a",
+   "id": "685842fb",
    "metadata": {
     "hide-output": false
    },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a23b86c",
+   "id": "9a48360d",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb71e4f5",
+   "id": "388b0fe7",
    "metadata": {
     "hide-output": false
    },
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7410152",
+   "id": "1fe2fb7e",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000ac318",
+   "id": "56b5e072",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d2e570",
+   "id": "aa800636",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "840a7566",
+   "id": "d86a4b9a",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2fc1db0",
+   "id": "2e99ea27",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8723524e",
+   "id": "c879840b",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba7122c",
+   "id": "0343e41e",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450682d1",
+   "id": "1edd61bf",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbdd9f91",
+   "id": "3399c6cc",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b744847e",
+   "id": "d2bb9958",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25329640",
+   "id": "6b1bf15f",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9dee920",
+   "id": "c7721e5b",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc08775f",
+   "id": "c845a93f",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688908d4",
+   "id": "9cfae36b",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1effc660",
+   "id": "c761822b",
    "metadata": {
     "hide-output": false
    },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d14f5a9",
+   "id": "c7d856e8",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91db06ff",
+   "id": "31da24ab",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c5a19c8",
+   "id": "43eab43e",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0532ad89",
+   "id": "8a114c5c",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f18b186",
+   "id": "0dddb19d",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb3b576",
+   "id": "522deb8a",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8511d2f5",
+   "id": "4465f87f",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c35f1ae4",
+   "id": "828a845b",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6669ae97",
+   "id": "75361d4b",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac06cdf",
+   "id": "e40aebd9",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a89351",
+   "id": "456c0285",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1047,7 +1047,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836278.325219,
+  "date": 1764839050.8793013,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
