--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "486d8923",
+   "id": "712fc08b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500571ea",
+   "id": "a89287aa",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fe70f2c",
+   "id": "28d7087f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f5d513",
+   "id": "d95634e8",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c01471a",
+   "id": "306f9b6a",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0d64eb4",
+   "id": "143a108e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d12bac04",
+   "id": "02e7aff7",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c9f0279",
+   "id": "c3e3083c",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a808555",
+   "id": "01b0d2f6",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4951d652",
+   "id": "c21eb0c2",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a1807e",
+   "id": "58b4dfe8",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d56ce9",
+   "id": "9948067d",
    "metadata": {
     "hide-output": false
    },
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6ecd7e5",
+   "id": "9f597272",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01ac2d5",
+   "id": "d610a59a",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e28e71",
+   "id": "47413438",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0657cf4",
+   "id": "fdcabee4",
    "metadata": {
     "hide-output": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "645fe6ea",
+   "id": "8fc0ea3b",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca3d1a83",
+   "id": "cf11245e",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4874a5b8",
+   "id": "9bacb183",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "592717bf",
+   "id": "2a47522f",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95670eb5",
+   "id": "81edabc8",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "819ba49f",
+   "id": "eb42b49b",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "354350f0",
+   "id": "c73ac12c",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e174dbd8",
+   "id": "b83565a3",
    "metadata": {
     "hide-output": false
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78437893",
+   "id": "406da39b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d468982",
+   "id": "572dcc8a",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b27c3e79",
+   "id": "86fc9e04",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b875b16",
+   "id": "324507e3",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c257c9bd",
+   "id": "86381541",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9d20636",
+   "id": "a61e09b0",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "743489ab",
+   "id": "abe44946",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4cc123d",
+   "id": "0b373f36",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849ad6e7",
+   "id": "b1031884",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21beac24",
+   "id": "0f94bf86",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b48c3d1",
+   "id": "e343d487",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f8ecfa",
+   "id": "a62f6685",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65af7c88",
+   "id": "3e530f63",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d56808a",
+   "id": "5d16cafe",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2f0867",
+   "id": "76ee0e7a",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   }
  ],
  "metadata": {
-  "date": 1764836278.426992,
+  "date": 1764839050.9879227,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
